[package]
name = "pass-engine"
version = "0.0.0"
edition = "2021"

[dependencies]
lapin = "2.1.1"
tokio = { version = "1.21.1", features = ["full"] }
futures-lite = "1.12.0"
serde_json = "1.0.85"
serde = "1.0.144"
chrono = "0.4.22"
mongodb = { version = "2.3.0", features = ["bson-chrono-0_4"] }
dotenv = "0.15.0"
rand = "0.8.5"
rand_core = "0.6.4"